# crossrepo-dep-manager

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-code-review.yml  ci.yml  cowork-auto-pr.yml  publish.yml
src/crossrepo_dep_manager/: __init__.py  cli.py  fixer.py  scanner.py
tests/: test_cli.py  test_fixer.py  test_scanner.py
