[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crossrepo-dep-manager"
version = "0.1.0"
description = "Cross-repo dependency management for Coding-Dev-Tools monorepo"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
crossrepo-dep = "crossrepo_dep_manager.cli:app"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
