[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crossrepo-dep-manager"
version = "0.1.1"
description = "Cross-repo dependency management for Coding-Dev-Tools monorepo"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.0",
]

[project.scripts]
crossrepo-dep = "crossrepo_dep_manager.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/crossrepo_dep_manager"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
